--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,12 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: John J. Camilleri
 email: john@johnjcamilleri.com
-description: > # this means to ignore newlines until "baseurl:"
-  I'm a Ph.D. student at the Department of Computer Science and Engineering at Chalmers and the University of Gothenburg, Sweden.
+description: I'm a Ph.D. student in Computer Science at Chalmers University of Technology and the University of Gothenburg, Sweden.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://johnjcamilleri.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+
+# Other
+ga_code: UA-11590274-1
