--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "http://johnjcamilleri.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+exclude: [Makefile, README.md]
 
 # Other
 ga_code: UA-11590274-1
